<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_color_manager"
        android:orderInCategory="100"
        android:title="@string/setting_color" />

    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/account" />

    <item
        android:id="@+id/action_fragment_manager"
        android:orderInCategory="100"
        android:title="@string/fragment_manage" />

    <item
        android:id="@+id/action_api_confirmation"
        android:orderInCategory="100"
        android:title="@string/api_confirmation" />

</menu>
