<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/colorId"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R" />

            <SeekBar
                android:id="@+id/redSeekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/G" />

            <SeekBar
                android:id="@+id/greenSeekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/B" />

            <SeekBar
                android:id="@+id/blueSeekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/colorView"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|right"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:background="#000000" />
</LinearLayout>